# resume-optimizer-ai

./: .env.example  .gitignore  IMPLEMENTATION_CHECKLIST.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run.sh  sample_jd.txt  sample_resume.md  test_api.py
backend/: __init__.py  database.py  graph.py  nodes.py  prompts.py  state.py  utils.py
config/: __init__.py  prompts.py  settings.py
data/: career_sync.db
frontend/: app.py  components.py  styles.py
