[project]
name = "resume-optimizer-ai"
version = "1.0.0"
description = "AI-powered resume optimizer with scoring and ATS optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "langgraph>=0.2.59",
    "langchain>=0.3.15",
    "langchain-openai>=0.3.0",
    "openai>=1.58.1",
    "python-dotenv>=1.0.0",
    "pypdf2>=3.0.1",
    "weasyprint>=63.1",
    "python-docx>=1.1.2",
]