[project]
name = "resume-optimizer-ai"
version = "1.0.0"
description = "AI-powered resume optimizer with scoring and ATS optimization"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Qubrid AI Team", email = "support@qubrid.com"}
]
license = {text = "MIT"}
keywords = ["resume", "ai", "optimization", "ats", "job-search"]

dependencies = [
    "streamlit>=1.40.0",
    "langgraph>=0.2.59",
    "langchain>=0.3.15",
    "langchain-openai>=0.3.0",
    "openai>=1.58.1",
    "python-dotenv>=1.0.0",
    "pypdf2>=3.0.1",
    "reportlab>=4.0.0",
    "python-docx>=1.1.2",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/aryadoshii/resume-optimizer-ai"
Repository = "https://github.com/aryadoshii/resume-optimizer-ai"
Issues = "https://github.com/aryadoshii/resume-optimizer-ai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true